force-app/main/default/objects/Property__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Belongings</fullName>
            </value>
            <value>
                <fullName>Extra Expenses</fullName>
            </value>
            <value>
                <fullName>Personal Liability</fullName>
            </value>
            <value>
                <fullName>Policy Deductible</fullName>
            </value>
            <value>
                <fullName>Sewer Backup</fullName>
            </value>
            <value>
                <fullName>Overland Water</fullName>
            </value>
            <value>
                <fullName>Full Hail</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>