force-app/main/default/objects/Property__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I own and live in it</fullName>
            </value>
            <value>
                <fullName>I rent it from someone else</fullName>
            </value>
            <value>
                <fullName>I own, don&#39;t live in it and rent it out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>